--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,11 +12,11 @@ body {
 /* html, body, heading */
 @layer base {
   body{
-    @apply bg-[#141414] text-white
+    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-slate-900 hover:!scrollbar-thumb-red-700;
   }
 
   header{
-    @apply fixed top-0 z-50 flex w-full items-center justify-between p-4 transition-all lg:px-10 lg:py-6;
+    @apply fixed top-0 z-50 flex w-full items-center justify-between p-4 transition-all lg:px-10 lg:py-6 select-none;
   }
 }
 
