--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 
 /* html, body, heading */
 @layer base {
@@ -33,6 +27,10 @@ body {
 
   .input{
     @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
+
+  .modalButton{
+    @apply flex h-11 w-11 items-center justify-center  rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10
   }
 }
 
