--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,35 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* html, body, heading */
 @layer base {
-  body{
-    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-slate-900 hover:!scrollbar-thumb-red-700;
+  html {
+    @apply scroll-smooth
   }
 
-  header{
+  body {
+    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-slate-900 hover:!scrollbar-thumb-red-700 ;
+  }
+
+  header {
     @apply fixed top-0 z-50 flex w-full items-center justify-between p-4 transition-all lg:px-10 lg:py-6 select-none;
   }
 }
 
-
 /* custom classnames */
 @layer components {
-  .headerLink{
-    @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3]
+  .headerLink {
+    @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3];
   }
 
-  .bannerButton{
+  .bannerButton {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-xs font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-lg;
   }
 
-  .input{
+  .input {
     @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
   }
 
-  .modalButton{
-    @apply flex h-11 w-11 items-center justify-center  rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10
+  .modalButton {
+    @apply flex h-11 w-11 items-center justify-center  rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
+  }
+
+  .planBox{
+    @apply relative mx-1.5 flex h-20 bg-[#e50914] w-[calc(100%/3)] cursor-default items-center justify-center rounded-sm font-semibold shadow after:content-[''] after:absolute after:top-full after:left-1/2 after:-translate-x-1/2 after:block after:border-8 after:border-b-0 after:border-transparent after:border-t-[#e50914] md:h-32 lg:mx-8;
   }
 }
-
