--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,11 @@
 /* html, body, heading */
 @layer base {
   html {
-    @apply scroll-smooth
+    @apply scroll-smooth;
   }
 
   body {
-    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-slate-900 hover:!scrollbar-thumb-red-700 ;
+    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-slate-900 hover:!scrollbar-thumb-red-700;
   }
 
   header {
@@ -35,25 +35,41 @@
     @apply flex h-11 w-11 items-center justify-center  rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
   }
 
-  .planBox{
+  .planBox {
     @apply relative mx-1.5 flex h-20 bg-[#e50914] w-[calc(100%/3)] cursor-default items-center justify-center rounded-sm font-semibold shadow after:content-[''] after:absolute after:top-full after:left-1/2 after:-translate-x-1/2 after:block after:border-8 after:border-b-0 after:border-transparent after:border-t-[#e50914] md:h-32 lg:mx-8 hover:cursor-pointer;
   }
 
-
-  /* Table */
-  .tableRow {
-    @apply flex flex-wrap items-center font-medium;
+  .membershipLink {
+    @apply cursor-pointer text-blue-500 hover:underline;
   }
+}
 
-  .tableDataTitle {
-    @apply w-full p-2.5 text-center text-sm font-normal text-white md:w-2/5 md:p-3.5 md:text-left md:text-base;
-  }
+/* Table */
+.tableRow {
+  @apply flex flex-wrap items-center font-medium;
+}
 
-  .tableDataFeature {
-    @apply w-[calc(100%/3)] p-2.5 text-center md:w-[calc(60%/3)] md:p-3.5;
-  }
+.tableDataTitle {
+  @apply w-full p-2.5 text-center text-sm font-normal text-white md:w-2/5 md:p-3.5 md:text-left md:text-base;
+}
 
-  .membershipLink{
-    @apply cursor-pointer text-blue-500 hover:underline
-  }
+.tableDataFeature {
+  @apply w-[calc(100%/3)] p-2.5 text-center md:w-[calc(60%/3)] md:p-3.5;
+}
+
+/* MUI Menu - for material UI you have to add !important*/
+.menu {
+  @apply md:hidden;
+}
+
+.menu .MuiPaper-root {
+  @apply !absolute !left-0 !rounded-none !border !border-[gray] !bg-black !text-white;
+}
+
+.menu .MuiList-root {
+  @apply !p-0;
+}
+
+.menu .MuiMenuItem-root {
+  @apply !block !w-72 !py-3.5 !text-center !text-sm !font-light !text-[#b3b3b3] !transition !duration-200 first:cursor-default first:!font-normal first:!text-white hover:!bg-[#11100F];
 }
